--- a/pages/styles.scss
+++ b/pages/styles.scss
@@ -16,6 +16,55 @@ html {
     @return $result;
 }
 
+$colorAccent: #ecf8e8;
+$colorBg: #edf2ff;
+
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background: linear-gradient(#fff, $colorBg);
+    height: 100vh;
 }
+
+h1 {
+    font-size: toRem(55);
+    font-weight: 600;
+}
+
+h2 {
+    font-size: toRem(30);
+    font-weight: 600;
+}
+
+p {
+    font-size: toRem(24);
+    font-weight: 400;
+}
+
+._header {
+    max-width: toRem(1600);
+    margin-inline: auto;
+    padding: 1rem;
+    background: linear-gradient(#fff, $colorBg);
+}
+
+
+.intro {
+    text-align: center;
+    padding-block: 2rem;
+
+    h1 {
+        max-width: 20ch;
+        margin-inline: auto;
+    }
+
+    p {
+        max-width: 30ch;
+        margin-inline: auto;
+    }
+}
+
+// #__next {
+//     max-width: toRem(1600);
+//     margin-inline: auto;
+//     padding-inline: 1rem;
+// }
