--- a/components/search/search.module.scss
+++ b/components/search/search.module.scss
@@ -1,6 +1,9 @@
 .container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    gap: 2rem;
     padding: 1rem 0 2rem;
 }
 
