card display done + search clear added

--- a/components/search/search.module.scss
+++ b/components/search/search.module.scss
@@ -12,3 +12,11 @@
     border-radius: 0.5rem;
     width: 30vw;
 }
+
+.clear {
+    text-align: center;
+    padding: 0.5rem;
+    font-size: 1rem;
+    cursor: pointer;
+    user-select: none;
+}
